[package]
name = "iced_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["image", "tokio"] }
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"
async-stream = "0.3.5"

[build-dependencies]
tonic-build = "0.9.2"
